<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather Forecast</string>
    <string name="yourcity">Enter City</string>
    <string name="temprature"> °c</string>
    <string name="date">Date</string>
    <string name="results">Weather Results</string>
    <string name="feel">Feel Like</string>
    <string name="min">Min. Temp</string>
    <string name="max">Max. temp</string>
    <string name="wind">Wind</string>
    <string name="warning">please enter your city.......</string>
    <string name="list">Favourite</string>
    <string name="about">About This App</string>
    <string name="aboutapp"><b>The Weather App - Your Window to Weather Conditions</b> \n\n

    Discover the power of Android app development with "The Weather App" - an immersive and educational experience that showcases the programmability of a native Android application using cutting-edge technologies. Please note that this app is intended for educational purposes and serves as a demo to help beginners grasp the fundamentals of Android development.
    \n\n
        <b>Key Features:</b>
    \n\n
    1. Real-time Weather Forecasts: Stay informed about current weather conditions, including temperature, humidity, wind speed, and more, with up-to-date forecasts for your location.
    \n\n
    2. Location-based Services: Utilize GPS capabilities to automatically detect your location and provide precise weather information tailored to your area.
    \n\n
    3. Beautifully Designed UI: Immerse yourself in an intuitive and visually appealing user interface that offers a seamless experience, making weather tracking a delight.
    \n\n
    4. Customization Options: Personalize your experience by selecting your preferred units of measurement, such as Celsius or Fahrenheit, and adjust the settings to suit your needs.
    \n\n
    5. Interactive Maps: Explore interactive maps that display weather patterns, allowing you to visualize and understand the weather conditions across different regions.
    \n\n
    6. Weather Alerts: Receive timely notifications and alerts for severe weather conditions, ensuring you stay safe and well-prepared.
    \n\n
    7. Extended Forecasts: Plan your activities with confidence using extended forecasts that provide weather predictions for the upcoming days, helping you make informed decisions.
    \n\n
    8. Accessibility Features: The app includes accessibility features, making it usable for individuals with visual impairments, ensuring everyone can access important weather information.
    \n\n
    9. Educational Resource: As an open-source project, "The Weather App" aims to educate and inspire beginners by providing a comprehensive codebase for studying Android app development. It demonstrates the integration of various technologies and best practices, serving as a valuable learning resource. Access the source code on GitHub: [GitHub URL](https://github.com/alfa-intellitech/android-wether-app).
    \n\n
    10. Constant Updates: We are committed to continuously improving the app and incorporating user feedback to provide a top-notch weather experience that is reliable and accurate.
    \n\n
        <b>Note:</b>
    \n\n
    "The Weather App" is meant to serve as a demonstration and learning tool for Android app development. While it offers real-time weather information, please note that it may not include the full feature set or provide the same level of accuracy as professional weather apps.
    \n\n
        <b>Unlock the World of Android Development</b>
    \n\n
    "The Weather App" is your gateway to the captivating realm of Android app development. Experience the thrill of creating robust, feature-rich applications while unraveling the mysteries of technologies such as location-based services, real-time data retrieval, and interactive UI design. Whether you are a beginner seeking to dive into the world of programming or an enthusiast eager to enhance your skills, this app will guide you on an exciting educational journey.
    \n\n
    **Download "The Weather App" now and embark on your Android development adventure!**
    </string>
    <string name="githublink">Github</string>
    <string name="apilink">Data Provided by</string>
</resources>