<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/hot"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/llone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/lltwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >
                <TextView
                    android:id="@+id/tvweather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/trwhite"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:orientation="vertical">
            <LinearLayout
                android:id="@+id/rltwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="10dp"
                android:paddingLeft="3dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"

                >


                <EditText
                    android:layout_gravity="start"
                    android:id="@+id/yourcity"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:baselineAligned="true"
                    android:hint="@string/yourcity"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:ems="10"
                    />

                <ImageView
                    android:layout_gravity="end|center"
                    android:id="@+id/ivsearch"
                    android:layout_width="50dp"
                    android:layout_height="37dp"
                    android:src="@drawable/search"

                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingHorizontal="20dp" />

            </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llfour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvcity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llfive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvyrlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>